tests/syntax_error/missing_colon.jou
def main() -> int  # Error: expected ':' followed by a new line with more indentation, got end of line
    return 0
